Revert "Fixes: NB#213057 - [TASK] Camera; §qtn_cam_whitebalance_fluorescent§ med. translation is truncated."
This reverts commit 5267ef03ae2580837c86b55714b3e9955eeb3ec7.

Reverting due 4132f9ff61e48d6d72fdb1061d14170567540adf was reverted from libmeegotouch master branch, as it causes crash on applications startup.

--- a/base/meegotouch/libmeegotouchviews/style/mbuttoniconstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mbuttoniconstyle.css
@@ -29,9 +29,6 @@ MButtonIconStyle {
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 0;
-    
-    text-wrap-mode: nowrap;
-    text-eliding: true;
 }
 
 MButtonIconStyle:pressed {
